# DSNP

./: .gitignore  Makefile.am  Makefile.in  NOTES  PROTOCOL  README  addfriend.php  answer.php  autogen.sh  becomefriend.php  configure  configure.ac  configure.in  flogin.php  getrelid.php  index.php  init.sh  login.php  logout.php  publish.php  refresh.php  returnftok.php  returnrelid.php  submitbecome.php  submitflogin.php  submitfriend.php  submitftok.php  submitlogin.php  submitrelid.php
choice/: .gitignore
cs-orig/: .gitignore
cs-orig/doc/: .gitignore
db/: .gitignore
doc/: .gitignore  Makefile.am  Makefile.in  dsnp-spec.tex  dsnp-spec.txt  generate.lm  orig.tex  spec.tex  spec.txt
dsnpd/: .gitignore  Makefile.am  Makefile.in  barrier.cc  broadcast.cc  broadcast.cpp  command.rl  conversion.cc  dsnp.h  encrypt.h  error.h  flogin.cc  flogin.cpp  friendreq.cc  friendreq.cpp  identity.cc  keys.cc  keys.cpp  login.cpp  main.cc  message.cc  message.cpp  notification.cc  parser.h  parser.rl  prefriend.cc  prefriend.cpp  queue.cc  rcfile.rl  recipients.h  server.cpp  string.cc  test.cc  tls.cpp  user.cc  user.cpp
issues/: 105.txt  106.txt  109.txt  110.txt  112.txt  114.txt  121.txt  124.txt  127.txt  129.txt  130.txt  135.txt  140.txt  141.txt  142.txt  143.txt  145.txt  151.txt  152.txt  160.txt  161.txt  164.txt  174.txt  175.txt  179.txt  187.txt  189.txt  190.txt  192.txt  198.txt  199.txt  206.txt  209.txt  211.txt  214.txt  216.txt  217.txt  220.txt  221.txt  222.txt  (+32 more)
issues/closed/: 102.txt  103.txt  104.txt  107.txt  108.txt  111.txt  113.txt  115.txt  116.txt  117.txt  118.txt  119.txt  120.txt  122.txt  123.txt  125.txt  126.txt  128.txt  131.txt  132.txt  133.txt  134.txt  136.txt  137.txt  138.txt  139.txt  144.txt  146.txt  147.txt  148.txt  149.txt  150.txt  153.txt  154.txt  156.txt  157.txt  158.txt  159.txt  162.txt  163.txt  (+103 more)
lib/: export.php  friend.php  iduri.php  init.php  owner.php  printdata.php  public.php
php/: .htaccess  admlogin.php  admlogout.php  alogin.php  alogout.php  answer.php  becomefriend.php  error.php  index.php  refresh.php  returnrelid.php  salogin.php  submitadmlogin.php  submitrelid.php
php/admin/: index.php  login.php  logout.php  newuser.php  session.php  slogin.php  snewuser.php
php/admin/lib/: admin.php  public.php  session.php
php/lib/: common.php  init.php  owner.php  printdata.php  public.php
php/user/: answer.php  become.php  becomefriend.php  broadcast.php  flogin.php  frfinal.php  image.php  index.php  login.php  logout.php  retftok.php  retrelid.php  sbecome.php  sendmeto.php  sflogin.php  sftoken.php  slogin.php  submitlogin.php  upload.php  wall.php
php/user/lib/: friend.php  functions.php  iduri.php  loginform.php  owner.php  public.php  session.php
scripts/: .gitignore
sppd/: Makefile.in  config.h.in  db.cpp  disttree.cpp  disttree.h  encrypt.cpp  encrypt.h  log.cpp  lstring.cpp  lstring.h  main.cpp  parser.rl  rcfile.rl  sppd.cpp  sppd.h  string.cpp  string.h  test.cpp  tls.cpp
src/: Makefile.in  base64.rl  encrypt.cpp  log.cpp  sppd.cpp  string.cpp  test.cpp  tls.cpp
useragent/: connection.php  usererr.php
